fix credit request p spacing

--- a/src/app/features/support/credit-request/credit-request.scss
+++ b/src/app/features/support/credit-request/credit-request.scss
@@ -9,9 +9,6 @@ md-input, md-textarea {
 }
 
 .credit-request-details {
-  p {
-    line-height: 3px;
-  }
   margin-bottom: 30px;
 }
 
